header and section
header and first section all done

--- a/index.html
+++ b/index.html
@@ -6,6 +6,36 @@
     <title>lecture 9</title>
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/media.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <div class="container divflx">
+        <img class="logo" src="images/logo.png" alt="logo" />
+        <nav>
+          <ul>
+            <li>
+              <a href="#">HOME</a>
+            </li>
+            <li>
+              <a href="#">ABOUT US</a>
+            </li>
+            <li>
+              <a href="#">OUR SERVICES</a>
+            </li>
+            <li>
+              <a href="#">TOUR PACKAGE</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+
+    <section class="s-1">
+      <div class="textwrapper">
+        <h1>Discover Greece</h1>
+        <h4>TRAVEL WITH UNIQUE EXPERIENCE</h4>
+      </div>
+    </section>
+  </body>
 </html>
