--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
     <div class="cardsdiv">
       <div class="cards">
-        <img src="images/card1.png" alt="card 1" />
+        <img class="image" src="images/card1.png" alt="card 1" />
         <p class="c1">FLIGHT BOOKING</p>
         <p class="c2">
           We hope you can visit and enjoy it ths beautiful places with your
@@ -57,48 +57,48 @@
       </div>
 
       <div class="cards">
-        <img src="images/card2.png" alt="card 2" />
+        <img class="image" src="images/card2.png" alt="card 2" />
         <p class="c1">HOTEL & RESORT BOOKING</p>
         <p class="c2">
           We hope you can visit and enjoy it ths beautiful places with your
           friend and favorite people
         </p>
+      </div>
 
-        <div class="cards">
-          <img src="images/card3.png" alt="card 3" />
-          <p class="c1">FAMILY TRIP PLANNER</p>
-          <p class="c2">
-            We hope you can visit and enjoy it ths beautiful places with your
-            friend and favorite people
-          </p>
-        </div>
+      <div class="cards">
+        <img class="image" src="images/card3.png" alt="card 3" />
+        <p class="c1">FAMILY TRIP PLANNER</p>
+        <p class="c2">
+          We hope you can visit and enjoy it ths beautiful places with your
+          friend and favorite people
+        </p>
+      </div>
 
-        <div class="cards">
-          <img src="images/card4.png" alt="card 4" />
-          <p class="c1">CRUISE TOUR</p>
-          <p class="c2">
-            We hope you can visit and enjoy it ths beautiful places with your
-            friend and favorite people
-          </p>
-        </div>
+      <div class="cards">
+        <img class="image" src="images/card4.png" alt="card 4" />
+        <p class="c1">CRUISE TOUR</p>
+        <p class="c2">
+          We hope you can visit and enjoy it ths beautiful places with your
+          friend and favorite people
+        </p>
+      </div>
 
-        <div class="cards">
-          <img src="images/card5.png" alt="card 5" />
-          <p class="c1">FIRE CAMP</p>
-          <p class="c2">
-            We hope you can visit and enjoy it ths beautiful places with your
-            friend and favorite people
-          </p>
-        </div>
+      <div class="cards">
+        <img class="image" src="images/card5.png" alt="card 5" />
+        <p class="c1">FIRE CAMP</p>
+        <p class="c2">
+          We hope you can visit and enjoy it ths beautiful places with your
+          friend and favorite people
+        </p>
+      </div>
 
-        <div class="cards">
-          <img src="images/card6.png" alt="card 6" />
-          <p class="c1">CORPORATE HOLYDAYS</p>
-          <p class="c2">
-            We hope you can visit and enjoy it ths beautiful places with your
-            friend and favorite people
-          </p>
-        </div>
+      <div class="cards">
+        <img class="image" src="images/card6.png" alt="card 6" />
+        <p class="c1">CORPORATE HOLYDAYS</p>
+        <p class="c2">
+          We hope you can visit and enjoy it ths beautiful places with your
+          friend and favorite people
+        </p>
       </div>
     </div>
   </body>
