--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <h4>TRAVEL WITH UNIQUE EXPERIENCE</h4>
       </div>
     </section>
-    <div class="s-2">
+    <div class="container s-2">
       <p class="p1">DISCOVER</p>
       <p class="p2">Our Hot Services</p>
       <p class="p3">
@@ -46,7 +46,7 @@
       </p>
     </div>
 
-    <div class="cardsdiv">
+    <div class="container cardsdiv">
       <div class="cards">
         <img src="images/card1.png" alt="card 1" />
         <p class="c1">FLIGHT BOOKING</p>
